reallly fix codeowners

--- a/x-pack/platform/packages/shared/ai-infra/anonymization-common/kibana.jsonc
+++ b/x-pack/platform/packages/shared/ai-infra/anonymization-common/kibana.jsonc
@@ -1,7 +1,7 @@
 {
   "type": "shared-common",
   "id": "@kbn/anonymization-common",
-  "owner": ["@elastic/workchat-eng"],
+  "owner": ["@elastic/workchat-eng", "@elastic/security-generative-ai", "@elastic/security-threat-hunting"],
   "group": "platform",
   "visibility": "shared"
 }
