--- a/packages/kbn-api-contracts/tsconfig.json
+++ b/packages/kbn-api-contracts/tsconfig.json
@@ -10,7 +10,7 @@
     "target/**/*"
   ],
   "kbn_references": [
-    "@kbn/tooling-log",
     "@kbn/dev-cli-runner",
+    "@kbn/repo-info",
   ]
 }
