Changes from node scripts/regenerate_moon_projects.js --update

--- a/packages/kbn-api-contracts/moon.yml
+++ b/packages/kbn-api-contracts/moon.yml
@@ -18,8 +18,8 @@ project:
   metadata:
     sourceRoot: packages/kbn-api-contracts
 dependsOn:
-  - '@kbn/tooling-log'
   - '@kbn/dev-cli-runner'
+  - '@kbn/repo-info'
 tags:
   - shared-common
   - package
