Changes from node scripts/lint_ts_projects --fix

--- a/x-pack/platform/plugins/shared/anonymization/tsconfig.json
+++ b/x-pack/platform/plugins/shared/anonymization/tsconfig.json
@@ -16,6 +16,7 @@
     "@kbn/anonymization-common",
     "@kbn/encrypted-saved-objects-plugin",
     "@kbn/features-plugin",
-    "@kbn/i18n"
+    "@kbn/i18n",
+    "@kbn/logging-mocks"
   ]
 }
