Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/anonymization/moon.yml
+++ b/x-pack/platform/plugins/shared/anonymization/moon.yml
@@ -24,6 +24,7 @@ dependsOn:
   - '@kbn/encrypted-saved-objects-plugin'
   - '@kbn/features-plugin'
   - '@kbn/i18n'
+  - '@kbn/logging-mocks'
 tags:
   - plugin
   - prod
