--- a/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
+++ b/x-pack/platform/plugins/shared/alerting_v2/tsconfig.json
@@ -54,7 +54,8 @@
     "@kbn/core-user-profile-common",
     "@kbn/core-user-profile-server-mocks",
     "@kbn/core-user-profile-server",
-    "@kbn/es-mappings"
+    "@kbn/es-mappings",
+    "@kbn/workflows-management-plugin"
   ],
   "exclude": ["target/**/*"]
 }
