Remove unneeded connector spec artifacts

--- a/x-pack/platform/plugins/shared/data_sources/server/sources/tavily/workflows/crawl.yaml
+++ b/x-pack/platform/plugins/shared/data_sources/server/sources/tavily/workflows/crawl.yaml
@@ -37,7 +37,7 @@ inputs:
 steps:
   - name: tavily-crawl
     type: mcp.callTool
-    connector-id: <%= stackConnectorId %>
+    connector-id: <%= mcp-stack-connector-id %>
     with:
       name: "tavily_crawl"
       arguments:
