--- a/x-pack/platform/plugins/shared/data_sources/server/sources/tavily/workflows/extract.yaml
+++ b/x-pack/platform/plugins/shared/data_sources/server/sources/tavily/workflows/extract.yaml
@@ -23,7 +23,7 @@ inputs:
 steps:
   - name: tavily-extract
     type: mcp.callTool
-    connector-id: <%= stackConnectorId %>
+    connector-id: <%= mcp-stack-connector-id %>
     with:
       name: "tavily_extract"
       arguments:
