--- a/x-pack/platform/plugins/shared/data_sources/server/sources/tavily/workflows/map.yaml
+++ b/x-pack/platform/plugins/shared/data_sources/server/sources/tavily/workflows/map.yaml
@@ -32,7 +32,7 @@ inputs:
 steps:
   - name: tavily-map
     type: mcp.callTool
-    connector-id: <%= stackConnectorId %>
+    connector-id: <%= mcp-stack-connector-id %>
     with:
       name: "tavily_map"
       arguments:
