Changes from node scripts/lint_ts_projects --fix

--- a/src/platform/packages/shared/kbn-esql-utils/tsconfig.json
+++ b/src/platform/packages/shared/kbn-esql-utils/tsconfig.json
@@ -37,5 +37,6 @@
     "@kbn/presentation-containers",
     "@kbn/utility-types",
     "@kbn/presentation-publishing",
+    "@kbn/controls-schemas",
   ]
 }
