--- a/src/platform/plugins/shared/discover/tsconfig.json
+++ b/src/platform/plugins/shared/discover/tsconfig.json
@@ -125,7 +125,8 @@
     "@kbn/shared-ux-error-boundary",
     "@kbn/core-chrome-app-menu",
     "@kbn/es-query-constants",
-    "@kbn/esql"
+    "@kbn/esql",
+    "@kbn/controls-schemas"
   ],
   "exclude": ["target/**/*"]
 }
