Changes from node scripts/regenerate_moon_projects.js --update

--- a/src/platform/packages/shared/kbn-esql-utils/moon.yml
+++ b/src/platform/packages/shared/kbn-esql-utils/moon.yml
@@ -39,6 +39,7 @@ dependsOn:
   - '@kbn/presentation-containers'
   - '@kbn/utility-types'
   - '@kbn/presentation-publishing'
+  - '@kbn/controls-schemas'
 tags:
   - shared-common
   - package
