--- a/x-pack/solutions/observability/plugins/slo/tsconfig.json
+++ b/x-pack/solutions/observability/plugins/slo/tsconfig.json
@@ -117,6 +117,7 @@
     "@kbn/react-query",
     "@kbn/deeplinks-management",
     "@kbn/deeplinks-observability",
-    "@kbn/observability-get-padded-alert-time-range-util"
+    "@kbn/observability-get-padded-alert-time-range-util",
+    "@kbn/presentation-publishing-schemas"
   ]
 }
