Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/solutions/observability/plugins/slo/moon.yml
+++ b/x-pack/solutions/observability/plugins/slo/moon.yml
@@ -123,6 +123,7 @@ dependsOn:
   - '@kbn/deeplinks-management'
   - '@kbn/deeplinks-observability'
   - '@kbn/observability-get-padded-alert-time-range-util'
+  - '@kbn/presentation-publishing-schemas'
 tags:
   - plugin
   - prod
