Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/cases/moon.yml
+++ b/x-pack/platform/plugins/shared/cases/moon.yml
@@ -105,6 +105,7 @@ dependsOn:
   - '@kbn/zod'
   - '@kbn/securitysolution-es-utils'
   - '@kbn/response-ops-retry-service'
+  - '@kbn/openapi-generator'
 tags:
   - plugin
   - prod
