--- a/.buildkite/scout_ci_config.yml
+++ b/.buildkite/scout_ci_config.yml
@@ -8,6 +8,7 @@ plugins:
     - discover_enhanced
     - entity_store
     - fleet
+    - gen_ai_settings
     - index_management
     - infra
     - lens
