--- a/src/platform/packages/private/kbn-controls-renderer/tsconfig.json
+++ b/src/platform/packages/private/kbn-controls-renderer/tsconfig.json
@@ -16,6 +16,6 @@
     "@kbn/controls-constants",
     "@kbn/i18n",
     "@kbn/controls-schemas",
-    "@kbn/presentation-containers",
+    "@kbn/presentation-containers"
   ]
 }
