--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -1327,6 +1327,9 @@
           "paginationTimestamp": {
             "type": "date"
           },
+          "paginationId": {
+            "type": "keyword"
+          },
           "timeout": {
             "type": "keyword"
           }
