make moon's eslint-fix break if a file has been fixed to prevent caching

--- a/.moon/tasks/node.yml
+++ b/.moon/tasks/node.yml
@@ -35,6 +35,7 @@ tasks:
       - '$projectSource'
       - '--no-error-on-unmatched-pattern'
       - '--fix'
+      - '--break-on-fix' # This is to prevent unwanted caching
     options:
       runFromWorkspaceRoot: true
       cache: true
