--- a/src/core/packages/elasticsearch/server-internal/tsconfig.json
+++ b/src/core/packages/elasticsearch/server-internal/tsconfig.json
@@ -35,6 +35,7 @@
     "@kbn/config-mocks",
     "@kbn/core-execution-context-server-mocks",
     "@kbn/core-http-server-mocks",
+    "@kbn/safer-lodash-set",
   ],
   "exclude": [
     "target/**/*",
