--- a/x-pack/platform/plugins/shared/dashboard_agent/tsconfig.json
+++ b/x-pack/platform/plugins/shared/dashboard_agent/tsconfig.json
@@ -22,7 +22,8 @@
     "@kbn/agent-builder-platform-plugin",
     "@kbn/react-kibana-mount",
     "@kbn/react-kibana-context-render",
-    "@kbn/deeplinks-analytics"
+    "@kbn/deeplinks-analytics",
+    "@kbn/dashboard-markdown"
   ],
   "exclude": ["target/**/*"]
 }
