Changes from node scripts/regenerate_moon_projects.js --update

--- a/x-pack/platform/plugins/shared/cases/moon.yml
+++ b/x-pack/platform/plugins/shared/cases/moon.yml
@@ -118,6 +118,7 @@ fileGroups:
     - public/**/*
     - server/**/*
     - scripts/**/*
+    - docs/openapi/**/*.gen.ts
     - '!target/**/*'
 tasks:
   jest:
