--- a/src/core/packages/elasticsearch/server-internal/moon.yml
+++ b/src/core/packages/elasticsearch/server-internal/moon.yml
@@ -42,6 +42,7 @@ dependsOn:
   - '@kbn/config-mocks'
   - '@kbn/core-execution-context-server-mocks'
   - '@kbn/core-http-server-mocks'
+  - '@kbn/safer-lodash-set'
 tags:
   - shared-server
   - package
