--- a/x-pack/platform/plugins/shared/dashboard_agent/moon.yml
+++ b/x-pack/platform/plugins/shared/dashboard_agent/moon.yml
@@ -36,6 +36,7 @@ dependsOn:
   - '@kbn/react-kibana-mount'
   - '@kbn/react-kibana-context-render'
   - '@kbn/deeplinks-analytics'
+  - '@kbn/dashboard-markdown'
 tags:
   - plugin
   - prod
