--- a/packages/kbn-check-saved-objects-cli/current_mappings.json
+++ b/packages/kbn-check-saved-objects-cli/current_mappings.json
@@ -1300,6 +1300,9 @@
           "additionalIndexPattern": {
             "type": "keyword"
           },
+          "additionalIndexPatterns": {
+            "type": "keyword"
+          },
           "delay": {
             "type": "keyword"
           },
@@ -1319,6 +1322,9 @@
             "type": "date"
           },
           "lookbackPeriod": {
+            "type": "keyword"
+          },
+          "paginationId": {
             "type": "keyword"
           },
           "paginationTimestamp": {
