--- a/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
+++ b/x-pack/platform/plugins/shared/dashboard_agent/kibana.jsonc
@@ -9,7 +9,7 @@
     "server": true,
     "browser": true,
     "configPath": ["xpack", "dashboardAgent"],
-    "requiredPlugins": ["agentBuilder", "agentBuilderPlatform", "dashboard", "data"],
+    "requiredPlugins": ["agentBuilder", "agentBuilderPlatform", "dashboard", "dashboardMarkdown", "data"],
     "optionalPlugins": ["share"],
     "requiredBundles": []
   }
